Añadido Group y mayor nivel de abstracción. Corregido problemas con path relativos