@@ -1,12 +1,16 @@
 package net.ramso.tools;
 
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 import com.predic8.schema.Attribute;
 import com.predic8.schema.AttributeGroup;
 import com.predic8.schema.ComplexType;
 import com.predic8.schema.Element;
+import com.predic8.schema.Group;
 import com.predic8.schema.Schema;
 import com.predic8.schema.SimpleType;
 import com.predic8.schema.TypeDefinition;
@@ -22,8 +26,9 @@ public class Tools {
 
 		if (file) {
 			href += id + ".dita";
+		} else {
+			href += "#" + id;
 		}
-		href += "#" + id;
 		return href;
 
 	}
@@ -35,6 +40,12 @@ public class Tools {
 	public static String getHref(Element element) throws MalformedURLException {
 		String idSchema = Tools.getSchemaId(element.getNamespaceUri());
 		String href = idSchema + "_" + getHref(true, element.getName() + Constants.SUFFIX_ELEMENT);
+		return href;
+	}
+	
+	public static String getHref(QName qname) throws MalformedURLException {
+		String idSchema = Tools.getSchemaId(qname.getNamespaceURI());
+		String href = idSchema + "_" + getHref(true, qname.getLocalPart() + getSuffixType(qname));
 		return href;
 	}
 
@@ -51,7 +62,17 @@ public class Tools {
 	}
 
 	public static String getSchemaId(String uri) throws MalformedURLException {
-		URL url = new URL(uri);
+		URL url = null;
+		if (uri == null || uri.isEmpty()) {
+			return "noNamespace";
+		} else if (uri.startsWith("urn")) {
+			URI urn = URI.create(uri);
+			String p = urn.getPath();
+			String a = urn.getSchemeSpecificPart().replaceAll("\\.", "").replaceAll("\\:", "");
+			return a;
+		} else {
+			url = new URL(uri);
+		}
 		String idSchema = "";
 		if (url.getHost() != null)
 			idSchema += url.getHost().replaceAll("\\.", "");
@@ -80,15 +101,25 @@ public class Tools {
 					Attribute a = SCHEMA.getAttribute(type);
 					if (a != null) {
 						return Constants.SUFFIX_ATTRIBUTE;
-					}else {
+					} else {
 						AttributeGroup g = SCHEMA.getAttributeGroup(type);
-						if(g != null) {
+						if (g != null) {
 							return Constants.SUFFIX_ATTRIBUTEGROUP;
+						}else {
+							Group gr = SCHEMA.getGroup(type);
+							if(gr!=null) {
+								return Constants.SUFFIX_GROUP;
+							}
 						}
 					}
 				}
 			}
 		}
 		return Constants.SUFFIX_TYPE;
+	}
+
+	public static TypeDefinition getType(QName type) {
+		return SCHEMA.getType(type);
+		
 	}
 }
